[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "DICL_adapters"
authors = [
  {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"},
  {name = "Vasilii Feofanov", email = "vasilii.feofanov@huawei.com"},
]
maintainers = [
  {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"},
]
dynamic = ["version", "readme", "dependencies"]
description = "Zero-shot Model-based Reinforcement Learning using Large Language Models."
requires-python = ">=3.9"
keywords = ["Model-based Reinforcement Learning", "Large language models", "Zero-shot Learning", "In-context Learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = ['ruff', 'pre-commit', 'black']
rl = ['gym==0.26.2', 'gymnasium==0.28.1', 'mujoco==2.3.3', 'dm-control==1.0.11', 'shimmy[gym-v26, dm-control]', 'stable-baselines3==2.0.0', 'tensorflow==2.17.0']
hyperopt = ['ray[tune]==2.40.0', 'hebo==0.3.6']

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]
sac = "dicl.rl.sac_continuous_action:main"
dicl-sac = "dicl.rl.sac_continuous_action_dicl:main"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
